--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
+  "name": "pi-test",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "build": "webpack",
-    "start": "anywhere -d build"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "gh-pages": "gh-pages -t -d dist"
+  },
+  "dependencies": {
+    "vue": "^3.2.37"
   },
   "devDependencies": {
-    "css-loader": "^3.3.2",
-    "html-webpack-plugin": "^3.2.0",
-    "jquery": "^3.4.1",
-    "style-loader": "^1.0.1",
-    "webpack": "^4.41.3",
-    "webpack-cli": "^3.3.10"
+    "@vitejs/plugin-vue": "^3.0.3",
+    "gh-pages": "^4.0.0",
+    "vite": "^3.0.7"
   }
 }
