--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "gh-pages": "gh-pages -t -d dist"
+    "gh-pages": "vite build && gh-pages -t -d dist"
   },
   "dependencies": {
     "vue": "^3.2.37"
